--- a/sponsoren.html
+++ b/sponsoren.html
@@ -48,19 +48,42 @@
                 <li>
                     <a href="">Teams</a>
                     <ul>
-                        <li><a href="team_organisation_finanzen.html">Organisation &amp; Finanzen</a>
+                        <li><a>Mechanik</a>
+                            <ul>
+                                <li><a href="team_mechanik_arm.html">Arm</a>
+                                </li>
+                                <li><a href="team_fahrwerk.html">Fahrwerk</a>
+                                </li>
+                                <li><a href="#">Transportwagen</a>
+                                </li>
+                                <li><a href="team_tueroeffner.html">Türöffner</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_elektronik_software.html">Elektronik &amp; Software</a>
+                        <li><a>Elektronik/Software</a>
+                            <ul>
+                                <li><a href="team_elektronik_software.html#ug_GUI">GUI</a>
+                                </li>
+                                <li><a href="team_kamerasteuerung.html">Kamera</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_ANSTEUERUNG">Motorsteuerung</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_ROS">ROS</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_SENSORIK">Sensorik</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_VERKABELUNG">Verkabelung/Gehäuse</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_kamerasteuerung.html">Kamerasteuerung</a>
+                        <li><a>Verwaltung</a>
+                            <ul>
+                                <li><a href="team_organisation_finanzen.html">Finazen/Koordination</a>
+                                </li>
+                                <li><a href="#">Marketing/Werbefilm</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_fahrwerk.html">Fahrwerk</a>
-                        </li>
-                        <li><a href="team_mechanik_arm.html">Mechanik Arm</a>
-                        </li>
-                        <li><a href="team_tueroeffner.html">Türöffner</a>
-                        </li>
-
                     </ul>
                 </li>
                 <!--                <li>
@@ -77,6 +100,7 @@
                 </li>
             </ul>
         </nav>
+
     </div>
 
     <!-- Main -->
@@ -132,6 +156,20 @@
                     </a>
                 </article>
             </div>
+            <div class="row">
+
+                <article class="4u special">
+                    <a href="http://www.coffee.de/" target="_blank" class="image featured"><img src="images/Sponsoren/leer.png" alt="" />
+                    </a>
+                    <!--                    <header>
+                        <h3><a href="http://www.coffee.de/" target="_blank">coffee.de</a></h3>
+                    </header>-->
+                </article>
+                <article class="4u special">
+                    <a href="http://www.pulspower.com/" target="_blank" class="image featured"><img src="images/Sponsoren/Bosch_Rexroth.svg.png" alt="" />
+                    </a>
+                </article>
+            </div>
         </div>
 
     </div>
@@ -142,10 +180,8 @@
                 <div class="12u">
 
                     <!-- Contact -->
-                                                <div class="logo"><img src="images/Logo/HM_Logo_transparent.png">
-                            </div>
                     <section>
-                        
+
                         <header>
                             <h3>Projekt Analysefahrzeug - Master Mechatronik München</h3>
 
