--- a/team_kamerasteuerung.html
+++ b/team_kamerasteuerung.html
@@ -49,19 +49,42 @@
                 <li>
                     <a href="">Teams</a>
                     <ul>
-                        <li><a href="team_organisation_finanzen.html">Organisation &amp; Finanzen</a>
+                        <li><a>Mechanik</a>
+                            <ul>
+                                <li><a href="team_mechanik_arm.html">Arm</a>
+                                </li>
+                                <li><a href="team_fahrwerk.html">Fahrwerk</a>
+                                </li>
+                                <li><a href="#">Transportwagen</a>
+                                </li>
+                                <li><a href="team_tueroeffner.html">Türöffner</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_elektronik_software.html">Elektronik &amp; Software</a>
+                        <li><a>Elektronik/Software</a>
+                            <ul>
+                                <li><a href="team_elektronik_software.html#ug_GUI">GUI</a>
+                                </li>
+                                <li><a href="team_kamerasteuerung.html">Kamera</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_ANSTEUERUNG">Motorsteuerung</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_ROS">ROS</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_SENSORIK">Sensorik</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_VERKABELUNG">Verkabelung/Gehäuse</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_kamerasteuerung.html">Kamerasteuerung</a>
+                        <li><a>Verwaltung</a>
+                            <ul>
+                                <li><a href="team_organisation_finanzen.html">Finazen/Koordination</a>
+                                </li>
+                                <li><a href="#">Marketing/Werbefilm</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_fahrwerk.html">Fahrwerk</a>
-                        </li>
-                        <li><a href="team_mechanik_arm.html">Mechanik Arm</a>
-                        </li>
-                        <li><a href="team_tueroeffner.html">Türöffner</a>
-                        </li>
-
                     </ul>
                 </li>
                 <!--                <li>
@@ -78,6 +101,7 @@
                 </li>
             </ul>
         </nav>
+
     </div>
 
     <!-- Main -->
@@ -98,7 +122,7 @@
                         <header>
                         </header>
                         <article>
-                            <img class="image fit" src="images/Gruppenbilder/Team_Kamera.jpg" />
+                            <img class="image fit" src="images/Gruppenbilder/WS1516/Team_Kamera.jpg" />
                         </article>
 
                     </section>
@@ -121,118 +145,68 @@
             <hr>
 
 
-
-            <article class="special">
-                <article>
-                    <p>
-                        Um diese anspruchsvolle Aufgabe zu bewältigen hat sich das junge Team dann in drei Untergruppen Kamerasystem, Konstruktion und Softwareentwicklung strukturiert. Die Hauptaufgabe besteht darin ein passendes und kostenmäßig erschwingliches Kamerasystem für die beiden Aufgaben Umgebungserkundung und Navigation zu finden. Die Aufgabe des Konstruktionsteams ist es ein Gimbal zu entwickeln, um zum Eine die Bewegung der Navigationskamera zu realisieren und zum Anderen die Kamera so stabilisiert, das ein wackelfreies Bild übertragen werden kann. Die Softwareentwicklung stellt die Schnittstelle zur Bildübertragung bereit, um die Daten an die zentrale Verarbeitungseinheit des Crawlers übermittelt zu können.
-                        <br> Ziel des Sommersemester 2015 ist es, ein Konzept für die Navigation des Crawlers über geeignete Kameras auszuarbeiten. Nach Durchlauf der Recherchephase und Konzeptphase wird am Ende eine Spezifikation des Gesamtsystems erfolgen, wo im nächsten Semester die Umsetzung der Produktidee anknüpft. Zusätzlich wird im Sommersemester 2015 noch der Gimbal-Prototyp für das Umgebungskamerasystem gebaut.
-                    </p>
-                </article>
-
-                <article>
-
-                    <script language="JavaScript">
-                        var i = 0;
-                        var path = new Array();
-
-                        // LIST OF IMAGES
-                        path[0] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/1.jpg";
-                        path[1] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/2.jpg";
-                        path[2] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/3.jpg"
-                        path[3] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/4.jpg";
-                        path[4] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/5.jpg";
-                        path[5] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/6.jpg";
-                        path[6] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/7.jpg";
-                        path[7] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/8.jpg";
-                        path[8] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/9.jpg";
-                        path[9] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/10.jpg";
-                        path[10] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/11.jpg";
-                        path[11] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/12.jpg";
-                        path[12] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/13.jpg";
-                        path[13] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/14.jpg";
-                        path[14] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/15.jpg";
-                        path[15] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/16.jpg";
-                        path[16] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/17.jpg";
-                        path[17] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/18.jpg";
-                        path[18] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/19.jpg";
-                        path[19] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/20.jpg";
-                        path[20] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/21.jpg";
-                        path[21] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/22.jpg";
-                        path[22] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/23.jpg";
-                        path[23] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/24.jpg";
-                        path[24] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/25.jpg";
-                        path[25] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/26.jpg";
-                        path[26] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/27.jpg";
-                        path[27] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/28.jpg";
-                        path[28] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/29.jpg";
-
-
-
-
-                        function swapImage() {
-                            document.slide.src = path[i];
-                            if (i < path.length - 1) i++;
-                            else i = 0;
-                            setTimeout("swapImage()", 3000);
-                        }
-                        window.onload = swapImage;
-                    </script>
-                    <img class="image fit" name="slide" src="images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/" width="400" />
-                </article>
-
-            </article>
-            <hr />
-
-            <article>
-                <header>
-                    <h2>Arbeitsresultate SoSe 2015</h2>
-                </header>
-            </article>
             <div class="row">
-                <article class="4u special">
-                    <header>
-                        <h3><a >Gimbel-Rendering</a></h3>
-                    </header>
-                    <a class="image featured"><img src="images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/25.jpg" alt="" />
-                    </a>
+                <article class="6u special">
+                    <article>
+                        <p>
+                            Um diese anspruchsvolle Aufgabe zu bewältigen hat sich das junge Team dann in drei Untergruppen Kamerasystem, Konstruktion und Softwareentwicklung strukturiert. Die Hauptaufgabe besteht darin ein passendes und kostenmäßig erschwingliches Kamerasystem für die beiden Aufgaben Umgebungserkundung und Navigation zu finden. Die Aufgabe des Konstruktionsteams ist es ein Gimbal zu entwickeln, um zum Eine die Bewegung der Navigationskamera zu realisieren und zum Anderen die Kamera so stabilisiert, das ein wackelfreies Bild übertragen werden kann. Die Softwareentwicklung stellt die Schnittstelle zur Bildübertragung bereit, um die Daten an die zentrale Verarbeitungseinheit des Crawlers übermittelt zu können.
+                            <br> Ziel des Sommersemester 2015 ist es, ein Konzept für die Navigation des Crawlers über geeignete Kameras auszuarbeiten. Nach Durchlauf der Recherchephase und Konzeptphase wird am Ende eine Spezifikation des Gesamtsystems erfolgen, wo im nächsten Semester die Umsetzung der Produktidee anknüpft. Zusätzlich wird im Sommersemester 2015 noch der Gimbal-Prototyp für das Umgebungskamerasystem gebaut.
+                        </p>
+                    </article>
                 </article>
-                <article class="4u special">
-                    <header>
-                        <h3><a  >Gimbel-CAD Model</a></h3>
-                    </header>
-                    <a class="image featured"><img src="images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/24.jpg" alt="" />
-                    </a>
-                </article>
-                <article class="4u special">
-                    <header>
-                        <h3><a  >Gimbel-Prototype</a></h3>
-                    </header>
-                    <a class="image featured"><img src="images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/26.jpg" alt="" />
-                    </a>
-                </article>
-            </div>
-            <hr>
-            <div>
-                <header>
-                    <h2>Ausblick auf WiSe 2015/16</h2>
-                </header>
-                <article>
-                    <ul class="Gruppen_Aufzaehlung">
-                        <li>Optimierung der Positionierung der Kamera im Achsenkreuz</li>
-                        <li>Schwerpunkt der Kamera in den Schnittpunkt der drei Achsen legen</li>
-                        <li>Besseres Material in Bezug auf Stabilität, Gewichtsoptimierung und Kühleigenschaften finden</li>
-                        <li>Abdichtung der Motoren optimieren</li>
-                        <li>Optimierung des 3D-gedruckten Test-Gehäuses</li>
-                        <li>Anbringung und Verdrahtung der Kameras an den Crawler</li>
-                        <li>Implementierung von Navigationshilfslinien in der GUI (enge Zusammenarbeit mit Elektronik-Gruppe)</li>
-                        <li>Konzeptionierung und Umsetzung einer Beleuchtungseinheit</li>
-                        <li>Problemlösung Temperaturentwicklung Motoren</li>
-                        <li>Layout Erstellung Treiberelektronik für insgesamt drei Motoren (Konstruktion eines Gehäuses)</li>
-                        <li>Fertigstellung Software</li>
-                        <li>Optimierung Regelung</li>
-                        <li>Optimierung Steuerung</li>
-                    </ul>
+                <article class="6u special">
+
+                    <article>
+
+                        <script language="JavaScript">
+                            var i = 0;
+                            var path = new Array();
+
+                            // LIST OF IMAGES
+                            path[0] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/1.jpg";
+                            path[1] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/2.jpg";
+                            path[2] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/3.jpg"
+                            path[3] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/4.jpg";
+                            path[4] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/5.jpg";
+                            path[5] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/6.jpg";
+                            path[6] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/7.jpg";
+                            path[7] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/8.jpg";
+                            path[8] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/9.jpg";
+                            path[9] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/10.jpg";
+                            path[10] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/11.jpg";
+                            path[11] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/12.jpg";
+                            path[12] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/13.jpg";
+                            path[13] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/14.jpg";
+                            path[14] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/15.jpg";
+                            path[15] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/16.jpg";
+                            path[16] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/17.jpg";
+                            path[17] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/18.jpg";
+                            path[18] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/19.jpg";
+                            path[19] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/20.jpg";
+                            path[20] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/21.jpg";
+                            path[21] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/22.jpg";
+                            path[22] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/23.jpg";
+                            path[23] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/24.jpg";
+                            path[24] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/25.jpg";
+                            path[25] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/26.jpg";
+                            path[26] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/27.jpg";
+                            path[27] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/28.jpg";
+                            path[28] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/29.jpg";
+
+
+
+
+                            function swapImage() {
+                                document.slide.src = path[i];
+                                if (i < path.length - 1) i++;
+                                else i = 0;
+                                setTimeout("swapImage()", 3000);
+                            }
+                            window.onload = swapImage;
+                        </script>
+                        <img class="image fit" name="slide" src="images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/" width="400" />
+                    </article>
+
                 </article>
             </div>
         </div>
@@ -245,10 +219,8 @@
                 <div class="12u">
 
                     <!-- Contact -->
-                                                <div class="logo"><img src="images/Logo/HM_Logo_transparent.png">
-                            </div>
                     <section>
-                        
+
                         <header>
                             <h3>Projekt Analysefahrzeug - Master Mechatronik München</h3>
 
