--- a/team_mechanik_arm.html
+++ b/team_mechanik_arm.html
@@ -49,19 +49,42 @@
                 <li>
                     <a href="">Teams</a>
                     <ul>
-                        <li><a href="team_organisation_finanzen.html">Organisation &amp; Finanzen</a>
+                        <li><a>Mechanik</a>
+                            <ul>
+                                <li><a href="team_mechanik_arm.html">Arm</a>
+                                </li>
+                                <li><a href="team_fahrwerk.html">Fahrwerk</a>
+                                </li>
+                                <li><a href="#">Transportwagen</a>
+                                </li>
+                                <li><a href="team_tueroeffner.html">Türöffner</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_elektronik_software.html">Elektronik &amp; Software</a>
+                        <li><a>Elektronik/Software</a>
+                            <ul>
+                                <li><a href="team_elektronik_software.html#ug_GUI">GUI</a>
+                                </li>
+                                <li><a href="team_kamerasteuerung.html">Kamera</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_ANSTEUERUNG">Motorsteuerung</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_ROS">ROS</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_SENSORIK">Sensorik</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_VERKABELUNG">Verkabelung/Gehäuse</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_kamerasteuerung.html">Kamerasteuerung</a>
+                        <li><a>Verwaltung</a>
+                            <ul>
+                                <li><a href="team_organisation_finanzen.html">Finazen/Koordination</a>
+                                </li>
+                                <li><a href="#">Marketing/Werbefilm</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_fahrwerk.html">Fahrwerk</a>
-                        </li>
-                        <li><a href="team_mechanik_arm.html">Mechanik Arm</a>
-                        </li>
-                        <li><a href="team_tueroeffner.html">Türöffner</a>
-                        </li>
-
                     </ul>
                 </li>
                 <!--                <li>
@@ -78,6 +101,7 @@
                 </li>
             </ul>
         </nav>
+
     </div>
 
     <!-- Main -->
@@ -127,8 +151,7 @@
                     <p>Mögliche Nebenaufgaben werden sich in diesem Semester erst bei den Applikations-Tests zeigen.</p>
                 </article>
                 <hr>
-
-                <article>
+                <article 6u special>
 
                     <script language="JavaScript">
                         var i = 0;
@@ -150,8 +173,6 @@
                         path[12] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/14.jpg";
                         path[13] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/15.jpg";
 
-
-
                         function swapImage() {
                             document.slide.src = path[i];
                             if (i < path.length - 1) i++;
@@ -162,56 +183,11 @@
                     </script>
                     <img class="image fit" name="slide" src="images/Arbeitsergebnisse/Team_Arm/Slideshow/1.jpg" width="400" />
                 </article>
+
             </article>
-            <hr>
-            <article>
-                <header>
-                    <h2>Arbeitsresultate SoSe 2015</h2>
-                </header>
-            </article>
-            <div class="row">
-                <div class="wrapper style1">
-                    <section id="features2" class="container special">
-                        <div class="row">
-                            <article class="6u special">
-                                <a class="image featured"><img src="images/Arbeitsergebnisse/Team_Arm/Slideshow/2.jpg" alt="" />
-                                </a>
-                            </article>
-                            <article class="6u special">
-                                <a class="image featured"><img src="images/Arbeitsergebnisse/Team_Arm/Slideshow/3.jpg" alt="" />
-                                </a>
-                            </article>
-                        </div>
-                    </section>
-                    <section id="features3" class="container special">
-                        <div class="row">
-                            <article class="6u special">
-                                <a class="image featured"><img src="images/Arbeitsergebnisse/Team_Arm/Slideshow/5.jpg" alt="" />
-                                </a>
-                            </article>
-                            <article class="6u special">
-                                <a class="image featured"><img src="images/Arbeitsergebnisse/Team_Arm/Slideshow/14.jpg" alt="" />
-                                </a>
-                            </article>
-                        </div>
-                    </section>
-                </div>
-                <hr>
-                <div>
-                    <header>
-                        <h2>Ausblick auf WiSe 2015/16</h2>
-                    </header>
-                    <article>
-                        <p>Die Applikation unserer Neuentwicklungen und die praktischen Tests zum Semesterende haben gezeigt, dass die Neuentwicklung des End-Effektors (des Greifers) das Potential gebracht hat, die Öffnung der Tür vollständig zu übernehmen. Das geplante Konzept ist größtenteils aufgegangen und wurde lediglich an einer Stelle im Vergleich zum Ursprungskonzept provisorisch verändert. Die Aktorik mit Form-Gedächtnis-Legierungs-draht sollte trotz ihrer Vorteile im nächsten Semester entweder verbessert, oder doch durch konventionelle Antriebe ersetzt werden. In jedem Fall war es für das ganze Team sehr interessant, diese Art der Aktorik praktisch auszuprobieren.</p>
-                        <p>Da das Konzept aber grundlegend zufriedenstellend funktioniert und beibehalten wird, sollte man als nächstes den Greifer aus Aluminium fertigen lassen, um die Stabilität und Haltbarkeit zu verbessern. Außerdem sollte der Draht, der ja im Betrieb erhitzt wird, verständlicherweise nicht unbedingt offen zugänglich sein.</p>
-                        <p>Weiterhin offene Arbeitspunkte sind außerdem die verbesserungswürdige Drehlagerung der Achsen und das Austauschen der teils unterschiedlichen Schrauben durch einheitliche Teile. Wichtig wäre es außerdem, eine höhere Anzahl an Testläufen durchzuführen, um praktische Aussagen zur Prozesssicherheit des Arm-Moduls treffen zu können.</p>
-                    </article>
-                </div>
-            </div>
         </div>
 
     </div>
-
     <!-- Footer -->
     <div id="footer">
         <div class="container">
@@ -219,10 +195,8 @@
                 <div class="12u">
 
                     <!-- Contact -->
-                                                <div class="logo"><img src="images/Logo/HM_Logo_transparent.png">
-                            </div>
                     <section>
-                        
+
                         <header>
                             <h3>Projekt Analysefahrzeug - Master Mechatronik München</h3>
 
