--- a/team_organisation_finanzen.html
+++ b/team_organisation_finanzen.html
@@ -48,19 +48,42 @@
                 <li>
                     <a href="">Teams</a>
                     <ul>
-                        <li><a href="team_organisation_finanzen.html">Organisation &amp; Finanzen</a>
+                        <li><a>Mechanik</a>
+                            <ul>
+                                <li><a href="team_mechanik_arm.html">Arm</a>
+                                </li>
+                                <li><a href="team_fahrwerk.html">Fahrwerk</a>
+                                </li>
+                                <li><a href="#">Transportwagen</a>
+                                </li>
+                                <li><a href="team_tueroeffner.html">Türöffner</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_elektronik_software.html">Elektronik &amp; Software</a>
+                        <li><a>Elektronik/Software</a>
+                            <ul>
+                                <li><a href="team_elektronik_software.html#ug_GUI">GUI</a>
+                                </li>
+                                <li><a href="team_kamerasteuerung.html">Kamera</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_ANSTEUERUNG">Motorsteuerung</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_ROS">ROS</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_SENSORIK">Sensorik</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_VERKABELUNG">Verkabelung/Gehäuse</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_kamerasteuerung.html">Kamerasteuerung</a>
+                        <li><a>Verwaltung</a>
+                            <ul>
+                                <li><a href="team_organisation_finanzen.html">Finazen/Koordination</a>
+                                </li>
+                                <li><a href="#">Marketing/Werbefilm</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_fahrwerk.html">Fahrwerk</a>
-                        </li>
-                        <li><a href="team_mechanik_arm.html">Mechanik Arm</a>
-                        </li>
-                        <li><a href="team_tueroeffner.html">Türöffner</a>
-                        </li>
-
                     </ul>
                 </li>
                 <!--                <li>
@@ -77,6 +100,7 @@
                 </li>
             </ul>
         </nav>
+
     </div>
 
     <!-- Main -->
@@ -90,21 +114,26 @@
                 </header>
             </article>
 
-            <div class="row 200%">
-                <div class="12u" id="sidebar">
+            <div class="row">
+                <div class="6u" id="sidebar">
                     <hr class="first" />
                     <section>
                         <header>
                         </header>
                         <article>
-                            <img class="image fit" src="images/Gruppenbilder/Organisation_Finanzen.jpg" />
+                            <img class="image fit" src="images/Gruppenbilder/WS1516/Team_Finanzen.jpg" />
                         </article>
+                        <div >
+                            <article>
+                                <img class="image fit" src="images/Arbeitsergebnisse/Team_Organisation_Finanzen/Organisationsdiagramm.png" />
+                            </article>
+                        </div>
 
                     </section>
                 </div>
 
 
-                <div class="12u important(collapse)" id="content">
+                <div class="6u important(collapse)" id="content">
                     <header>
 
                     </header>
@@ -115,11 +144,7 @@
 
                     </article>
                 </div>
-                <div class="12u important(collapse)">
-                    <article>
-                        <img class="image fit" src="images/Arbeitsergebnisse/Team_Organisation_Finanzen/Organisationsdiagramm.png" />
-                    </article>
-                </div>
+
             </div>
         </div>
 
@@ -131,10 +156,8 @@
                 <div class="12u">
 
                     <!-- Contact -->
-                                                <div class="logo"><img src="images/Logo/HM_Logo_transparent.png">
-                            </div>
                     <section>
-                        
+
                         <header>
                             <h3>Projekt Analysefahrzeug - Master Mechatronik München</h3>
 
