--- a/team_tueroeffner.html
+++ b/team_tueroeffner.html
@@ -49,19 +49,42 @@
                 <li>
                     <a href="">Teams</a>
                     <ul>
-                        <li><a href="team_organisation_finanzen.html">Organisation &amp; Finanzen</a>
+                        <li><a>Mechanik</a>
+                            <ul>
+                                <li><a href="team_mechanik_arm.html">Arm</a>
+                                </li>
+                                <li><a href="team_fahrwerk.html">Fahrwerk</a>
+                                </li>
+                                <li><a href="#">Transportwagen</a>
+                                </li>
+                                <li><a href="team_tueroeffner.html">Türöffner</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_elektronik_software.html">Elektronik &amp; Software</a>
+                        <li><a>Elektronik/Software</a>
+                            <ul>
+                                <li><a href="team_elektronik_software.html#ug_GUI">GUI</a>
+                                </li>
+                                <li><a href="team_kamerasteuerung.html">Kamera</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_ANSTEUERUNG">Motorsteuerung</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_ROS">ROS</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_SENSORIK">Sensorik</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_VERKABELUNG">Verkabelung/Gehäuse</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_kamerasteuerung.html">Kamerasteuerung</a>
+                        <li><a>Verwaltung</a>
+                            <ul>
+                                <li><a href="team_organisation_finanzen.html">Finazen/Koordination</a>
+                                </li>
+                                <li><a href="#">Marketing/Werbefilm</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_fahrwerk.html">Fahrwerk</a>
-                        </li>
-                        <li><a href="team_mechanik_arm.html">Mechanik Arm</a>
-                        </li>
-                        <li><a href="team_tueroeffner.html">Türöffner</a>
-                        </li>
-
                     </ul>
                 </li>
                 <!--                <li>
@@ -78,6 +101,7 @@
                 </li>
             </ul>
         </nav>
+
     </div>
 
     <!-- Main -->
@@ -121,17 +145,15 @@
             <hr>
 
 
-
-            <article class="special">
-                <article>
+            <div class="row">
+                <article class="6u special">
                     <p>
                         Im Wintersemester 2014/15 wurde der Türöffner komplett von der ursprünglichen Idee auf Blatt Papier in die Realität überführt. Jedoch war diese relativ einfach gefertigt und hatte trotz einwandfreier Gesamtfunktion viel Optimierungspotenzial gerade in Bereich Gewichtsreduzierung.
                     </p>
                     <p>Auf Grundlage dieser Erkenntnis haben wir im SS 2015 eine Gewichtsoptimierung und FEM-Simulation der einzelnen Komponenten des Türöffners durchgeführt und konnten somit das Gewicht Gesamtsystems-Türöffner von 7,17 kg auf 5,18 kg senken. Das entspricht einer Gewichtersparnis von 27,81 %.</p>
                 </article>
-                <hr>
 
-                <article>
+                <article class="6u special">
 
                     <script language="JavaScript">
                         var i = 0;
@@ -174,19 +196,7 @@
                     <img class="image fit" name="slide" src="images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/1.jpg" width="400" />
                 </article>
 
-            </article>
-            <hr>
-            <header>
-                <h2>Ausblick auf WiSe 2015/16</h2>
-            </header>
-            <article>
-                <ul class="Gruppen_Aufzaehlung">
-                    <li>Kompletten Ausleger aus CFK-Rohren aufbauen</li>
-                    <li>T-Stück am Türöffner optimieren</li>
-                    <li>Zusammenarbeit mit Team Fahrwerk um einheitliche Schrauben zu verwenden</li>
-                    <li>Zusammenarbeit mit Team Sensorik um die Anbringung von Sensoren festzulegen und die Verkabelung zu klären</li>
-                </ul>
-            </article>
+            </div>
         </div>
 
     </div>
@@ -197,10 +207,8 @@
                 <div class="12u">
 
                     <!-- Contact -->
-                                                <div class="logo"><img src="images/Logo/HM_Logo_transparent.png">
-                            </div>
                     <section>
-                        
+
                         <header>
                             <h3>Projekt Analysefahrzeug - Master Mechatronik München</h3>
 
