--- a/impressum.html
+++ b/impressum.html
@@ -47,19 +47,42 @@
                 <li>
                     <a href="">Teams</a>
                     <ul>
-                        <li><a href="team_organisation_finanzen.html">Organisation &amp; Finanzen</a>
+                        <li><a>Mechanik</a>
+                            <ul>
+                                <li><a href="team_mechanik_arm.html">Arm</a>
+                                </li>
+                                <li><a href="team_fahrwerk.html">Fahrwerk</a>
+                                </li>
+                                <li><a href="#">Transportwagen</a>
+                                </li>
+                                <li><a href="team_tueroeffner.html">Türöffner</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_elektronik_software.html">Elektronik &amp; Software</a>
+                        <li><a>Elektronik/Software</a>
+                            <ul>
+                                <li><a href="team_elektronik_software.html#ug_GUI">GUI</a>
+                                </li>
+                                <li><a href="team_kamerasteuerung.html">Kamera</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_ANSTEUERUNG">Motorsteuerung</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_ROS">ROS</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_SENSORIK">Sensorik</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_VERKABELUNG">Verkabelung/Gehäuse</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_kamerasteuerung.html">Kamerasteuerung</a>
+                        <li><a>Verwaltung</a>
+                            <ul>
+                                <li><a href="team_organisation_finanzen.html">Finazen/Koordination</a>
+                                </li>
+                                <li><a href="#">Marketing/Werbefilm</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_fahrwerk.html">Fahrwerk</a>
-                        </li>
-                        <li><a href="team_mechanik_arm.html">Mechanik Arm</a>
-                        </li>
-                        <li><a href="team_tueroeffner.html">Türöffner</a>
-                        </li>
-
                     </ul>
                 </li>
                 <!--                <li>
@@ -76,6 +99,7 @@
                 </li>
             </ul>
         </nav>
+
     </div>
 
     <!-- Main -->
@@ -134,17 +158,17 @@
             </article>
         </div>
 
-    </div>    <!-- Footer -->
+    </div>    
+    
+        <!-- Footer -->
     <div id="footer">
         <div class="container">
             <div class="row">
                 <div class="12u">
 
                     <!-- Contact -->
-                                                <div class="logo"><img src="images/Logo/HM_Logo_transparent.png">
-                            </div>
                     <section>
-                        
+
                         <header>
                             <h3>Projekt Analysefahrzeug - Master Mechatronik München</h3>
 
@@ -172,7 +196,6 @@
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
