--- a/team_elektronik_software.html
+++ b/team_elektronik_software.html
@@ -49,19 +49,42 @@
                 <li>
                     <a href="">Teams</a>
                     <ul>
-                        <li><a href="team_organisation_finanzen.html">Organisation &amp; Finanzen</a>
+                        <li><a>Mechanik</a>
+                            <ul>
+                                <li><a href="team_mechanik_arm.html">Arm</a>
+                                </li>
+                                <li><a href="team_fahrwerk.html">Fahrwerk</a>
+                                </li>
+                                <li><a href="#">Transportwagen</a>
+                                </li>
+                                <li><a href="team_tueroeffner.html">Türöffner</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_elektronik_software.html">Elektronik &amp; Software</a>
+                        <li><a>Elektronik/Software</a>
+                            <ul>
+                                <li><a href="team_elektronik_software.html#ug_GUI">GUI</a>
+                                </li>
+                                <li><a href="team_kamerasteuerung.html">Kamera</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_ANSTEUERUNG">Motorsteuerung</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_ROS">ROS</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_SENSORIK">Sensorik</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_VERKABELUNG">Verkabelung/Gehäuse</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_kamerasteuerung.html">Kamerasteuerung</a>
+                        <li><a>Verwaltung</a>
+                            <ul>
+                                <li><a href="team_organisation_finanzen.html">Finazen/Koordination</a>
+                                </li>
+                                <li><a href="#">Marketing/Werbefilm</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_fahrwerk.html">Fahrwerk</a>
-                        </li>
-                        <li><a href="team_mechanik_arm.html">Mechanik Arm</a>
-                        </li>
-                        <li><a href="team_tueroeffner.html">Türöffner</a>
-                        </li>
-
                     </ul>
                 </li>
                 <!--                <li>
@@ -78,6 +101,7 @@
                 </li>
             </ul>
         </nav>
+
     </div>
 
     <!-- Main -->
@@ -113,69 +137,56 @@
                         <article>
                             <p>Das Team Elektronik und Software ist für die elektronischen Komponenten des Crawlers zuständig, sowie für die Software die für die Steuerung des Crawlers benötigt wird. Da dies ein sehr großes und Komplexes aufgabengebiet ist unterteilt sich die Gruppe in sechs verschiedene Teilbereiche. </p>
                             <ul class="Gruppen_Aufzaehlung">
-                                <a href="#ug_GUI"><li >GUI</li></a>
-                                <a href="#ug_SENSORIK"><li>Sensorik</li></a>
-                                <a href="#ug_ANSTEUERUNG"><li>Ansteuerung</li></a>
-                                <a href="#ug_VERKABELUNG"> <li>Verkabelung &amp; Hardware</li></a>
-                                <a href="#ug_ROS"><li>ROS</li></a>
-                                <a href="#ug_CONTROLLER"><li>Controller</li></a>
+                                <a href="#ug_GUI">
+                                    <li>GUI</li>
+                                </a>
+                                <a href="#ug_SENSORIK">
+                                    <li>Sensorik</li>
+                                </a>
+                                <a href="#ug_ANSTEUERUNG">
+                                    <li>Ansteuerung</li>
+                                </a>
+                                <a href="#ug_VERKABELUNG">
+                                    <li>Verkabelung &amp; Hardware</li>
+                                </a>
+                                <a href="#ug_ROS">
+                                    <li>ROS</li>
+                                </a>
+                                <a href="#ug_CONTROLLER">
+                                    <li>Controller</li>
+                                </a>
                             </ul>
                         </article>
 
                     </article>
                 </div>
             </div>
-            <hr>
-                            <article>
-
-                    <script language="JavaScript">
-                        var i = 0;
-                        var path = new Array();
-
-                        // LIST OF IMAGES
-                        path[0] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/1.jpg";
-                        path[1] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/2.jpg";
-                        path[2] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/3.jpg"
-                        path[3] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/4.jpg";
-                        path[4] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/5.jpg";
-                        path[5] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/6.jpg";
-                        path[6] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/7.jpg";
-                        path[7] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/8.jpg";
-                        path[8] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/9.jpg";
-                        path[9] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/10.png";
-                        path[10] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/11.png";
-                        path[11] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/12.png";
-
-                        function swapImage() {
-                            document.slide.src = path[i];
-                            if (i < path.length - 1) i++;
-                            else i = 0;
-                            setTimeout("swapImage()", 3000);
-                        }
-                        window.onload = swapImage;
-                    </script>
-                    <img class="image fit" name="slide" src="images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/1.jpg" width="400" />
-                </article>
 
             <hr id="ug_GUI">
-            <article class="special">
-                <header>
-                    <h2 >Untergruppe GUI</h2>
-                </header>
-                <p>Die GUI (engl. Graphical User Interface) soll dem Benutzer des Crawlers in Echtzeit (oder in einem noch akzeptablen Zeitverzug) das Bild der Crawler-Webcam übertragen um so eine verbesserte Steuerbarkeit zu gewährleisten.
-                    <br>
-                    <br>Des Weiteren sollen Zusatzinformationen, wie die Aktivität der Roboter-Komponenten und Informationen über den aktuellen Fahrstatus, wie Richtungsanzeige, Geschwindigkeit oder Akkustand, angezeigt werden.
-                    <br>
-                    <br>Aus diesem Grund wurde eine GUI mit der Programiersprache Python unter Verwendung mehrerer Zusatzpackages (u.a. GTK, PyGTK und VideoCapture), entwickelt. Eine in Python programmierte GUI hat den Vorteil, dass das Programm plattformunabhängig und somit mit verschiedenen Betriebssystemen benutzbar ist.
-                    <br>Eine Ergänzung unterschiedlichster Funktionalitäten kann mit Hilfe von verschiedenen Open Source Packages erfolgen.
-                    <br>Derzeit ist eine Aufnahme und Anzeige von Fotos mit einer PC-internen Webcam möglich.
-                    <br>
-                    <br>Im Laufe des nächsten Semesters muss weiter an der Annahme und Verarbeitung der von den Crawler-Komponenten gesendeten Statusinformationen gearbeitet werden.
-                </p>
-            </article>
+            <header>
+                <h2>Untergruppe GUI</h2>
+            </header>
+            <div class="row">
+                <article class="6u special">
+
+                    <p>Die GUI (engl. Graphical User Interface) soll dem Benutzer des Crawlers in Echtzeit (oder in einem noch akzeptablen Zeitverzug) das Bild der Crawler-Webcam übertragen um so eine verbesserte Steuerbarkeit zu gewährleisten.
+                        <br>
+                        <br>Des Weiteren sollen Zusatzinformationen, wie die Aktivität der Roboter-Komponenten und Informationen über den aktuellen Fahrstatus, wie Richtungsanzeige, Geschwindigkeit oder Akkustand, angezeigt werden.
+                        <br>
+                        <br>Aus diesem Grund wurde eine GUI mit der Programiersprache Python unter Verwendung mehrerer Zusatzpackages (u.a. GTK, PyGTK und VideoCapture), entwickelt. Eine in Python programmierte GUI hat den Vorteil, dass das Programm plattformunabhängig und somit mit verschiedenen Betriebssystemen benutzbar ist.
+                        <br>Eine Ergänzung unterschiedlichster Funktionalitäten kann mit Hilfe von verschiedenen Open Source Packages erfolgen.
+                        <br>Derzeit ist eine Aufnahme und Anzeige von Fotos mit einer PC-internen Webcam möglich.
+                        <br>
+                        <br>Im Laufe des nächsten Semesters muss weiter an der Annahme und Verarbeitung der von den Crawler-Komponenten gesendeten Statusinformationen gearbeitet werden.
+                    </p>
+                </article>
+                <article class="6u special">
+                    <img class="image fit" src="images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/1.jpg" width="400" />
+                </article>
+            </div>
             <hr id="ug_SENSORIK">
             <header>
-                <h2 >Untergruppe Sensorik</h2>
+                <h2>Untergruppe Sensorik</h2>
             </header>
             <p> Die Sensorikgruppe wurde gegründet, um den Crawler zusätzliche Umgebungsinformationen zu liefern.
                 <br>
@@ -185,7 +196,7 @@
                 <br>Das Konzept der Sensorikgruppe sieht vor, dass zusätzliche Sensoren jederzeit eingebunden werden können
             </p>
             <hr id="ug_ANSTEUERUNG">
-            <header >
+            <header>
                 <h2>Untergruppe Ansteuerung</h2>
             </header>
             <p>Die Untergruppe Ansteuerung kümmert sich darum das der Crawler sich tatsächlich bewegt.
@@ -197,34 +208,43 @@
             <header>
                 <h2>Untergruppe Verkabelung &amp; Hardware</h2>
             </header>
-            <p>Das Hauptaugenmerk unserer Gruppe liegt darin, eine geeignete Anordnung zu entwickeln, die eine Wartung und Montage aller in das Elektronikgehäuse zu verbauenden Hardwarekomponenten ermöglicht. Zudem werden Möglichkeiten erarbeitet, um das Gehäuse an den Crawler selbst zu integrieren.</p>
-            <h3>Folgende Bauelemente werden zur Unterbringung in das Gehäuse berücksichtigt:</h3>
-            <ul class="Text_Aufzaehlung">
-                <li>9 Platinen (ohne Adapter)</li>
-                <li>Industrie PC</li>
-                <li>Mikrocontroller</li>
-                <li>Powerplatinen </li>
-                <li>Kabel</li>
-                <li>Akku</li>
-            </ul>
-            <h3>Derzeitige Aufgaben:</h3>
-            <ul class="Text_Aufzaehlung">
-                <li>Prüfen ob entsprechende Adapter für CAN-Bus ursprüngliche Anordnung im Gehäuse erlauben.</li>
-                <li>Umsetzung einer neuen, an die Gegebenheiten angepasste, Öffnungsklappe.</li>
-                <li>Konstruieren von geeigneten Winkeln zur Montage des Gehäuses.</li>
-                <li>Prüfen ob Einbau des neuen Akkus ins Gehäuse möglich ist.</li>
-            </ul>
+            <div class="row">
+                <article class="6u special">
 
-            <h3>Zuletzt umgesetzte Umbauten:</h3>
-            <ul class="Text_Aufzaehlung">
-                <li>Einbau eines Scharniers zur Öffnung einer Seitenwand</li>
-                <li>Elektronik-Halterungsmöglichkeit entwickelt und konstruiert</li>
-                <li>Elektronik-Halterungsmöglichkeit herstellt durch ein 3D-Druckverfahren</li>
-            </ul>
-            <h3>Zukünftige Aufgaben:</h3>
-            <p>Aufgrund der weitreichenden Veränderungen der Hardware (neuer Akku, CAN-Adapter), muss im nächsten Semester eine ausführliche Prüfung und Planung zur Umgestaltung des Elektronikgehäuses, auf Basis der aktuellen Anforderungen, erfolgen.</p>
+                    <p>Das Hauptaugenmerk unserer Gruppe liegt darin, eine geeignete Anordnung zu entwickeln, die eine Wartung und Montage aller in das Elektronikgehäuse zu verbauenden Hardwarekomponenten ermöglicht. Zudem werden Möglichkeiten erarbeitet, um das Gehäuse an den Crawler selbst zu integrieren.</p>
+
+
+                    <h3>Folgende Bauelemente werden zur Unterbringung in das Gehäuse berücksichtigt:</h3>
+                    <ul class="Text_Aufzaehlung">
+                        <li>9 Platinen (ohne Adapter)</li>
+                        <li>Industrie PC</li>
+                        <li>Mikrocontroller</li>
+                        <li>Powerplatinen </li>
+                        <li>Kabel</li>
+                        <li>Akku</li>
+                    </ul>
+                </article>
+                <article class="6u special">
+                    <h3>Derzeitige Aufgaben:</h3>
+                    <ul class="Text_Aufzaehlung">
+                        <li>Prüfen ob entsprechende Adapter für CAN-Bus ursprüngliche Anordnung im Gehäuse erlauben.</li>
+                        <li>Umsetzung einer neuen, an die Gegebenheiten angepasste, Öffnungsklappe.</li>
+                        <li>Konstruieren von geeigneten Winkeln zur Montage des Gehäuses.</li>
+                        <li>Prüfen ob Einbau des neuen Akkus ins Gehäuse möglich ist.</li>
+                    </ul>
+
+                    <h3>Zuletzt umgesetzte Umbauten:</h3>
+                    <ul class="Text_Aufzaehlung">
+                        <li>Einbau eines Scharniers zur Öffnung einer Seitenwand</li>
+                        <li>Elektronik-Halterungsmöglichkeit entwickelt und konstruiert</li>
+                        <li>Elektronik-Halterungsmöglichkeit herstellt durch ein 3D-Druckverfahren</li>
+                    </ul>
+                    <h3>Zukünftige Aufgaben:</h3>
+                    <p>Aufgrund der weitreichenden Veränderungen der Hardware (neuer Akku, CAN-Adapter), muss im nächsten Semester eine ausführliche Prüfung und Planung zur Umgestaltung des Elektronikgehäuses, auf Basis der aktuellen Anforderungen, erfolgen.</p>
+                </article>
+            </div>
             <hr id="ug_ROS">
-            <header >
+            <header>
                 <h2>Untergruppe ROS</h2>
             </header>
             <p>
@@ -233,21 +253,20 @@
             <p>Durch den Einsatz eines modularen Softwareaufbaus wurde erreicht, das der Crawler leicht um weitere Elemente (z.B.: die Sensorik) erweitert werden kann.
             </p>
             <hr id="ug_CONTROLLER">
-            <header>
-                <h2>Untergruppe Controller</h2>
-            </header>
-            <p>Der zur Steuerung des Crawlers verwendete Controller ist via USB mit einem Laptop verbunden. Die Anbindung dieses Laptops an die ROS-Plattform erfolgt über eine Wireless-LAN Schnittstelle.</p>
-            <p>Die Daten des Controllers werden über ein Python-Programm in Form von Events ausgewertet und zwischengespeichert. Über eine TCP/IP-Verbindung werden die Daten dann zyklisch an den TCP/IP-Server der ROS-Plattform gesendet. Der Programmablauf wird mit Multi-Threading parallelisiert. Dadurch können die Controller-Events abgefragt und gleichzeitig Daten an den Crawler gesendet werden. Somit wird verhindert, dass der Programmablauf durch das Warten auf die Controller-Events blockiert wird.
-            </p>
-            <img class="image featured2" src="images/Arbeitsergebnisse/Team_Elektronik_Software/ros_1.png" />
-            <hr>
-            <header>
-                <h2>Ausblick auf WiSe 2015/16</h2>
-            </header>
-            <article>
-                <p>Die Ziele für das nächste Semester sind im Bereich der GUI Gruppe die Annahme und Verarbeitung der von den Crawler-Komponenten gesendeten Statusinformationen. Die Gruppe Hardware und Verkabelung hat in dem kommenden Semester die Aufgabe ein neues Gehäuse für die Elektronik zu entwickeln, da sich in der Hardware gravierende Änderungen ergeben haben. Dies sind der Einsatz eines neuen Akkus sowie die Verwendung eines neuen CAN Adapters.</p>
-            </article>
+            <div class="row">
+                <article class="6u special">
+                    <header>
+                        <h2>Untergruppe Controller</h2>
+                    </header>
+                    <p>Der zur Steuerung des Crawlers verwendete Controller ist via USB mit einem Laptop verbunden. Die Anbindung dieses Laptops an die ROS-Plattform erfolgt über eine Wireless-LAN Schnittstelle.</p>
+                    <p>Die Daten des Controllers werden über ein Python-Programm in Form von Events ausgewertet und zwischengespeichert. Über eine TCP/IP-Verbindung werden die Daten dann zyklisch an den TCP/IP-Server der ROS-Plattform gesendet. Der Programmablauf wird mit Multi-Threading parallelisiert. Dadurch können die Controller-Events abgefragt und gleichzeitig Daten an den Crawler gesendet werden. Somit wird verhindert, dass der Programmablauf durch das Warten auf die Controller-Events blockiert wird.
+                    </p>
 
+                </article>
+                <article class="6u special">
+                    <img class="image featured" src="images/Arbeitsergebnisse/Team_Elektronik_Software/ros_1.png" />
+                </article>
+            </div>
         </div>
 
     </div>
@@ -258,10 +277,8 @@
                 <div class="12u">
 
                     <!-- Contact -->
-                                                <div class="logo"><img src="images/Logo/HM_Logo_transparent.png">
-                            </div>
                     <section>
-                        
+
                         <header>
                             <h3>Projekt Analysefahrzeug - Master Mechatronik München</h3>
 
