--- a/team_fahrwerk.html
+++ b/team_fahrwerk.html
@@ -49,19 +49,42 @@
                 <li>
                     <a href="">Teams</a>
                     <ul>
-                        <li><a href="team_organisation_finanzen.html">Organisation &amp; Finanzen</a>
+                        <li><a>Mechanik</a>
+                            <ul>
+                                <li><a href="team_mechanik_arm.html">Arm</a>
+                                </li>
+                                <li><a href="team_fahrwerk.html">Fahrwerk</a>
+                                </li>
+                                <li><a href="#">Transportwagen</a>
+                                </li>
+                                <li><a href="team_tueroeffner.html">Türöffner</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_elektronik_software.html">Elektronik &amp; Software</a>
+                        <li><a>Elektronik/Software</a>
+                            <ul>
+                                <li><a href="team_elektronik_software.html#ug_GUI">GUI</a>
+                                </li>
+                                <li><a href="team_kamerasteuerung.html">Kamera</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_ANSTEUERUNG">Motorsteuerung</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_ROS">ROS</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_SENSORIK">Sensorik</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_VERKABELUNG">Verkabelung/Gehäuse</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_kamerasteuerung.html">Kamerasteuerung</a>
+                        <li><a>Verwaltung</a>
+                            <ul>
+                                <li><a href="team_organisation_finanzen.html">Finazen/Koordination</a>
+                                </li>
+                                <li><a href="#">Marketing/Werbefilm</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a href="team_fahrwerk.html">Fahrwerk</a>
-                        </li>
-                        <li><a href="team_mechanik_arm.html">Mechanik Arm</a>
-                        </li>
-                        <li><a href="team_tueroeffner.html">Türöffner</a>
-                        </li>
-
                     </ul>
                 </li>
                 <!--                <li>
@@ -78,6 +101,7 @@
                 </li>
             </ul>
         </nav>
+
     </div>
 
     <!-- Main -->
@@ -98,7 +122,7 @@
                         <header>
                         </header>
                         <article>
-                            <img class="image fit" src="images/Gruppenbilder/Fahrwerk.jpg" />
+                            <img class="image fit" src="images/Gruppenbilder/WS1516/Team_Fahrwerk.jpg" />
                         </article>
 
                     </section>
@@ -116,142 +140,58 @@
 
                     </article>
                 </div>
-            </div>
 
-            <hr>
+                <div class="row">
+                    <article class="6u special">
+                        <h3>Antriebsstrang</h3>
+                        <p>Um den Verzug am Antriebstrang des Crawlers aus den letzten Jahren zu vermeiden wurde eine Getriebebox entwickelt. Idee dabei ist es, möglichst alle Komponenten wie Motor, Lagerung und Getriebeteile an ein kompaktes stabiles Gehäuse anzubinden. Es wurden insgesamt drei Konzepte entwickelt, wobei sich für das unten abgebildete Konzept entschieden wurde, da es sowohl die nötige Steifigkeit als auch das geringste Gewicht aufweist.</p>
 
-
-
-            <article class="special">
-                <article>
-                    <p>
-                        Konkret wurden im Team Fahrwerk in den letzten beiden Semestern folgendes bearbeitet und optimiert. Im CAD-Modell, welches den Dreht- und Angelpunkt für die Entwicklung darstellt, wurden gravierende Fehler der letzten Semester repariert. Dies beinhaltete beispielsweise die vollständige Definition von Skizzen und Baugruppen, das Einfügen von Standardteilen wie Schrauben und Muttern sowie sie vollständige räumliche Definition der Gesamtbaugruppe des Crawlers. Es wurden falsch ausgelegte Kupplungen, die der Belastung nicht stand hielten und daher gebrochen waren, ausgetauscht. Des Weiteren wurde eine Nut in die Führungsschiene des Antriebsriemens gefräst, um einen leichteren Lauf des Riemens zu gewährleisten. Außerdem wurde das Heck des Chassis verkürzt und durch eine Querstrebe verstärkt, um das aufsitzen des Crawlers beim Anfahren einer Treppe zu verhindern und es wurden Gewichtsoptimierungen am Chassis und den Antriebseinheiten vorgenommen.
-                        <br> Ein Ausblick auf die kommenden Semester bringt folgende Aufgaben. Es soll ein variabel einstellbares Schnellspannsystems für die Antriebsriemen entwickelt werde. Es soll eine Gehäuse konstruiert und gefertigt werden, um das Getriebe zu Kapseln. Und es soll eine Vereinheitlichung der Standartteile wie Schrauben und Muttern erfolgen.
-
-                    </p>
-                </article>
-
-                <article>
-
-                    <script language="JavaScript">
-                        var i = 0;
-                        var path = new Array();
-
-                        // LIST OF IMAGES
-                        path[0] = "images/slideshow/fahrwerk/Crawler_komplett.png";
-                        path[1] = "images/slideshow/fahrwerk/Crawler_komplett_side.png";
-                        path[2] = "images/slideshow/fahrwerk/FEM.png";
-                        path[3] = "images/slideshow/fahrwerk/Neue-Ausleger-Spannung.png";
-                        path[4] = "images/slideshow/fahrwerk/Neue-Ausleger-Spannung_top.png";
-                        path[5] = "images/slideshow/fahrwerk/Rendering%20Fahrwerk.png";
-                        path[6] = "images/slideshow/fahrwerk/vlcsnap-2015-06-08-12h41m12s804.png";
-                        path[7] = "images/slideshow/fahrwerk//vlcsnap-2015-06-08-12h41m50s384.png";
-                        path[8] = "images/slideshow/fahrwerk/vlcsnap-2015-06-08-12h42m10s937.png";
-                        path[9] = "images/slideshow/fahrwerk/zeichnung.png";
-
-                        function swapImage() {
-                            document.slide.src = path[i];
-                            if (i < path.length - 1) i++;
-                            else i = 0;
-                            setTimeout("swapImage()", 3000);
-                        }
-                        window.onload = swapImage;
-                    </script>
-                    <img class="image fit" name="slide" src="images/slideshow/fahrwerk/Crawler_komplett.png" width="400" />
-                </article>
-
-            </article>
-            <hr>
-
-            <article>
-                <header>
-                    <h2>Arbeitsresultate SoSe 2015</h2>
-                </header>
-            </article>
-            <div class="row">
-                <article class="4u special">
-                    <header>
-                        <h3><a  >Ausleger (alt)</a></h3>
-                    </header>
-                    <a class="image featured"><img src="images/Arbeitsergebnisse/Team_Fahrwerk/Ausleger_alt.png" alt="" />
-                    </a>
-                    <header>
-                        <h3><a  >neuer Stand</a></h3>
-                    </header>
-                    <a class="image featured"><img src="images/Arbeitsergebnisse/Team_Fahrwerk/Ausleger_neu.png" alt="" />
-                    </a>
-                    <header>
-                        <h3><a  >Ausleger</a></h3>
-                    </header>
-                    <div>
-                        <h3>Problem:</h3>
-                        <p>Gewichtsreduzierung, System-
-                            <br>vereinfachung
-                            <br>
+                        <p>
+                            Die Getriebebox besteht aus <b>zwei Seitenwänden</b> einem <b>Deckel</b> und einer <b>Rückplatte</b> und wird mittels Schrauben am Rahmen des Crawlers angebracht. Durch das Konzept der Getriebebox ist eine schnelle einfache Montage des Antriebsstranges mit Getriebe möglich.
                         </p>
-                        <h3>Lösung:</h3>
-                        <p>Veränderung des Spannsystems für Riemen</p>
-                    </div>
-                </article>
-                <article class="4u special">
-                    <header>
-                        <h3><a  >Chassi (alt)</a></h3>
-                    </header>
-                    <a class="image featured"><img src="images/Arbeitsergebnisse/Team_Fahrwerk/chassi_alt.jpg" alt="" />
-                    </a>
-                    <header>
-                        <h3><a  >neuer Stand</a></h3>
-                    </header>
-                    <a class="image featured"><img src="images/Arbeitsergebnisse/Team_Fahrwerk/chassi_neu.jpg" alt="" />
-                    </a>
-                    <header>
-                        <h3><a  >Chassi</a></h3>
-                    </header>
-                    <div>
-                        <h3>Problem:</h3>
-                        <p>Beim Anfahren an eine Treppe aufsetzen des Chassis</p>
-                        <h3>Lösung:</h3>
-                        <p>Kürzen des Überstands der Längsträger</p>
-                    </div>
-                </article>
-                <article class="4u special">
-                    <header>
-                        <h3><a  >Kupplung (alt)</a></h3>
-                    </header>
-                    <a class="image featured"><img src="images/Arbeitsergebnisse/Team_Fahrwerk/Kupplung_alt.jpg" alt="" />
-                    </a>
-                    <header>
-                        <h3><a  >neuer Stand</a></h3>
-                    </header>
-                    <a class="image featured"><img src="images/Arbeitsergebnisse/Team_Fahrwerk/Kupplung_neu.png" alt="" />
-                    </a>
-                    <header>
-                        <h3><a  >Kupplungen</a></h3>
-                    </header>
-                    <div>
-                        <h3>Problem:</h3>
-                        <p>Zu hohe Kräfte in Kupplungen, Bruch der Kupplungen</p>
-                        <h3>Lösung:</h3>
-                        <p>Neue Ausgleichskupplungen
-                            <br> (Längenverstatz, Winkelversatz)</p>
-                    </div>
-                </article>
+                        <a class="image featured"><img src="images/Arbeitsergebnisse/Team_Fahrwerk/WS1516/Bild2.png" alt="" />
+                        </a>
+                        <p>Um zu überprüfen ob die Getriebebox die nötigen mechanischen Eigenschaften aufweist wurde eine FEM-Analyse durchgeführt. Anhand dieser wurde festgestellt, dass die Getriebebox ausreichend
+                        </p>
+                        <article>
+
+                            <script language="JavaScript">
+                                var i = 0;
+                                var path = new Array();
+
+                                // LIST OF IMAGES
+                                path[0] = "images/Arbeitsergebnisse/Team_Fahrwerk/WS1516/analyse1.png";
+                                path[1] = "images/Arbeitsergebnisse/Team_Fahrwerk/WS1516/analyse2.png";
+
+                                function swapImage() {
+                                    document.slide.src = path[i];
+                                    if (i < path.length - 1) i++;
+                                    else i = 0;
+                                    setTimeout("swapImage()", 3000);
+                                }
+                                window.onload = swapImage;
+                            </script>
+                            <img class="image fit" name="slide" src="images/Arbeitsergebnisse/Team_Fahrwerk/WS1516/analyse1.png" width="400" />
+
+                        </article>
+                    </article>
+
+                    <article class="6u special">
+                        <h3>Riemenspanner</h3>
+                        <p>Das neue Konzept wurde geprüft, überarbeitet und schließlich gefertigt.
+                            <br> Der neue Spanner wurde massiv vereinfacht. Die Anzahl der Bauteile wurde verringert und so auch der Fertigungsaufwand und mögliche Fehlerquellen. Außerdem kann der neue Spanner, dank seines 30mm Hubes, weiter ausgefahren werden als das vorherige Modell.<br>
+                            <br> Der neue Spanner besteht im Wesentlichen aus einer Halterung einer Lagerung für die Achse und dem Riemenrad.
+                        </p>
+                        <p>Nachdem die Funktion des neuen Konzepts geprüft wurde, konnten die Zeichnungen mit entsprechenden Fertigungstoleranzen versehen werden und zur Fertigung gegeben werden.</p>
+                        <img class="image fit" src="images/Arbeitsergebnisse/Team_Fahrwerk/WS1516/Spanner1.jpg" />
+
+                    </article>
+                </div>
             </div>
-            <hr>
-            <header>
-                <h2>Ausblick auf WiSe 2015/16</h2>
-            </header>
-            <article>
-                <ul class="Gruppen_Aufzaehlung">
-                    <li>Variabel einstellbares Schnellspannsystems für die Antriebsriemen</li>
-                    <li>Gehäuse zur Kapselung des Getriebes</li>
-                    <li>Vereinheitlichung der Standartteile wie Schrauben und Muttern</li>
-                </ul>
-            </article>
 
         </div>
-
     </div>
+
     <!-- Footer -->
     <div id="footer">
         <div class="container">
@@ -259,10 +199,8 @@
                 <div class="12u">
 
                     <!-- Contact -->
-                                                <div class="logo"><img src="images/Logo/HM_Logo_transparent.png">
-                            </div>
                     <section>
-                        
+
                         <header>
                             <h3>Projekt Analysefahrzeug - Master Mechatronik München</h3>
 
